# shell-pallet

./: .gitignore  Cargo.toml
shell-pallet/: Cargo.toml
shell-pallet/src/: lib.rs
src/: lib og.rs  lib simp.rs  lib.rs
super-basic-pallet/: Cargo.toml
super-basic-pallet/src/: lib.rs  tests.rs
